do some changes

--- a/home.css
+++ b/home.css
@@ -1,33 +1,32 @@
-#form{
-    text-align: center;
+#form {
+    text-align: justify;
 
 }
-#btn{
-    color:rgb(204, 204, 204);
-    background:rgb(247, 19, 19) ;
-    height:40px;
-    width:100px;
+
+#btn {
+    color: rgb(5, 5, 5);
+    background: rgb(218, 215, 215);
+    height: 40px;
+    width: 100px;
     border-radius: 10px;
-    
-}
-#btn:hover{
-    background-color: yellow;
-    color:black;
+
 }
 
-#form{
-    margin-top:50px;
+#btn:hover {
+    background-color: rgb(255, 153, 0);
+    color: rgb(12, 12, 12);
+}
+
+#form {
+    margin-top: 100px;
     width: 300px;
-  border: 05px solid rgb(2, 4, 36);
-  padding: 50px;
-margin-left: auto;
-margin-right: auto;
-background-color:#dad5d5
+    padding: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #474646
 }
 
-#login{
-    color:rgb(7, 7, 29)
-}
-#body{
-    background-color:white 
+
+#form body {
+    background-color: rgb(233, 218, 218)
 }
